syntax = "proto3";
package post;

service PostService {
  
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {};
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {};
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {};

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {};
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse) {};
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {};

  rpc Like(LikeRequest) returns (LikeResponse) {};
  rpc UnLike(UnlikeRequest) returns (UnlikeResponse) {};

  rpc ReportPost(ReportPostRequest) returns (ReportPostResponse) {};
  rpc SavePost(SavePostRequest) returns (SavePostResponse) {};
}


message Image {
  string url =1;
  string name=2;
}


enum Media {
  image=0;
  video=1;
  text=2;
}

enum Status {
  active=0;
  deleted=1;
  blocked=2;
}

message CommentEnums {
  enum Media {
    text=0;
    gif=1;
  }
  enum ContentType {
    post=0;
    story=1;
    comment=2;
  }
}


message Like {
  string _id=1;
  string authorId=2;
  string contentId=3;
  CommentEnums.ContentType contentType=4;
  string updatedAt=5;
  string createdAt=6;
  string authorName=7;
  string authorImage=8;
}

message Comment {
  string _id =1;
  string media=2;
  CommentEnums.Media mediaType=3;
  int32 likesCount=4;
  int32 replayCount=5;
  string parentId =6;
  Status status=7;
  string contentId=8;
  CommentEnums.ContentType contentType=9;
  string createdAt=10;
  string updatedAt=11;
  string authorId=12;
  string authorName=13;
  string authorImage=14;
};

message Post  {
  string _id=1;
  string desc=2;
  Media mediaType=3;
  repeated string media=4;
  repeated string tags=13;
  string authorId=5;
  Status status =6;
  int32 likesCount=7;
  int32 reportsCount=8;
  int32 commentCount=9;
  int32 shareCount=10;
  string updatedAt=11;
  string createdAt=12;
  string authorName=14;
  string authorImage=15;
};

message Saved {
  string _id = 1;
  string userId = 2;
  string postId = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message ReportEnums  {
  enum ContentType {
    post = 0;
    story = 1;
    user = 2;
    comment = 3;
  }
}

message Report {
  string _id = 1;
  string userId = 2;
  string contentId = 3;
  ReportEnums.ContentType contentType = 4;
  string description = 5;
  string createdAt = 6;
  string updatedAt = 7;
}



message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
  string postId=2;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string postId=1;
}

message DeletePostResponse {
  string postId=1;
}

message LikeRequest {
  string authorId =1;
  CommentEnums.ContentType contentType=2;
  string contentId =3;
}

message LikeResponse {
  Like like=1;
}

message UnlikeRequest {
  string contentId=1;
  string authorId=2;
}

message UnlikeResponse {
  Like like=1;
}

message CreateCommentRequest {
  Comment comment =1;
  string contentType=2;
  string contentId =3;
}

message CreateCommentResponse {
  Comment comment =1;
}

message UpdateCommentRequest {
  Comment comment =1;
  string commentId =2;
}

message UpdateCommentResponse {
  Comment comment=1;
}

message DeleteCommentRequest {
  string commentId=1;
}

message DeleteCommentResponse {
  string commentId=1;
}

message ReportPostRequest {
  string contentId=1;
  string userId =2;
  ReportEnums.ContentType contentType = 3;
}

message ReportPostResponse {
  Report reportData=1;
}

message SavePostRequest {
  string postId =1;
  string userId =2;
}

message SavePostResponse {
  Saved savedData=1;
  Post savedPost=2;
}